# CSC411

./: .gitignore  README.md  transformed_moss.ppm
A1/: README.md
A1/brightness/: Cargo.toml
A1/fgroups/: DesignDoc.txt  input.txt
A2/: README.md
A2/array2/: Cargo.toml
A2/array2/src/: lib.rs
A2/sudoku/src/: main.rs  sudoku.pgm
A3/: DESIGN.md  README.md
A3/array2/: Cargo.toml  DESIGNDOC.md
A3/array2/src/: lib.rs
A3/ppmtrans/: Cargo.toml
A4/array2/src/: lib.rs
A4/docs/: README.md
A4/rpeg/: Cargo.toml  input.ppm
A4/rpeg/src/: dct.rs  lib.rs
A4/rpeg/tests/: test_color_space.rs  test_dct.rs
A5/: binarybomb.md
A6/docs/: readme.md
A6/src/: loader.rs
A6/umbin/: adventure_input.txt
arith/array2/src/: array2.rs
arith/docs/: design.md
arith/rpeg/: input.rpeg
arith/rpeg/src/: codec.rs  color_space.rs  (+1 more)
diff-lab/image_transformer/: Cargo.toml
diff-lab/ppmdiff/: Cargo.toml
iii/: technique.txt
iii/sudoku/: Cargo.toml
intro/fgroups/: Cargo.toml  README.md
locality/: ESTIMATES.md
rum/: Cargo.toml  run_segment.s  unmap_segment.s
rum/docs/: labnotes.md  readme.md
rum/src/: main.rs  vm.rs
rumasm/: Cargo.toml
rumasm/src/: lib.rs  rumasm.rs
rumdump-lab/: Cargo.toml
rumdump-lab/bitpack/: Cargo.toml
submission/rum/: Cargo.toml  test.um
submission/rum/rum/: Cargo.toml
submission/rum/rum/bitpack/tests/: test_bitpack.rs
submission/rum/rum/rumdump/src/: rumdis.rs  rumload.rs
submission/rum/rum/src/io/: mod.rs
submission/rum/rum/src/vm/: mod.rs
submission/rum/rum/tests/: basic_ops.rs  integration.rs  memory_test.rs
(+27 files in other folders)
