[package]
name = "rum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rum"
path = "src/bin/rum.rs"

[workspace]
members = ["bitpack", "rumdump"]
resolver = "2"

[dependencies]
anyhow = "1.0"
thiserror = "2.0.12"
dashmap = "6.1.0"
crossbeam-queue = "0.3"
rand = "0.9.1"
bitpack = { path = "./bitpack" }

[dev-dependencies]
tempfile = "3.3"
rumasm = { path = "../rumasm" }